[java] Fixing all Java 8 compatibility issues